packages/beff-wasm/fixtures/errors/qualified-context/t2.ts
export type Param = {
  cb: () => void;
};
